# KDPE

./: .gitattributes  .gitignore  LICENSE  README.md  conda_environment.yaml  conda_environment_real.yaml  config.py  eval.py  index.html  pyproject.toml
data/: rollout.hdf5
diffusion_policy/config/: train_diffusion_transformer_hybrid_workspace.yaml  train_diffusion_unet_hybrid_workspace.yaml  train_diffusion_unet_real_panda_workspace.yaml
diffusion_policy/config/task/: assembly.yaml  assembly_image.yaml  can.yaml  coffee.yaml  coffee_image.yaml  coffee_preparation_image.yaml  lift.yaml  pick_place_image.yaml  pick_plush_hybrid.yaml  real_robot.yaml  square.yaml  stack.yaml  stack_image.yaml  tool_hang.yaml
diffusion_policy/dataset/: robomimic_replay_image_dataset.py
diffusion_policy/env/robomimic/: robomimic_image_wrapper.py  robomimic_lowdim_wrapper.py
diffusion_policy/env_runner/: robomimic_image_runner.py
diffusion_policy/env_runner/utils/: shift.py
diffusion_policy/model/filters/: __init__.py  kde.py  oodkde.py  passall.py  tkde.py
diffusion_policy/policy/: diffusion_transformer_hybrid_image_policy.py  diffusion_unet_hybrid_image_policy.py
diffusion_policy/workspace/: train_diffusion_transformer_hybrid_workspace.py  train_diffusion_unet_hybrid_workspace.py  train_robomimic_image_workspace.py
licenses/: LICENSE_KDPE
src/examples/: inspect_rollout.py
src/traj_viz/: visualizer.py
src/traj_viz/utils/: blueprint.py  urdf_logger.py
tests/: test_multi_realsense.py  test_single_realsense.py
