[project]
authors = [{name = "Andrea Rosasco", email = ""}]
name = "traj_viz"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "urdf-parser-py>=0.0.4,<0.0.5"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
traj_viz = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
rerun-sdk = ">=0.23.2,<0.24"
opencv = ">=4.11.0,<5"
scipy = ">=1.15.2,<2"
h5py = ">=3.13.0,<4"
trimesh = ">=4.6.9,<5"
matplotlib = ">=3.10.3,<4"
pycollada = ">=0.9,<0.10"
